--- a/css/menu.css
+++ b/css/menu.css
@@ -160,12 +160,14 @@ input.ejer  {
     height: 50px;
     background:#15c8ff;
     border-radius: 6px;
+	text-align: center;
 }
 input.peque  {
     width: 57px; 
     height: 50px;
     background:#15c8ff;
-    border-radius: 6px;
+    border-radius: 100%;
+	text-align: center
 }
 label{
 	font-family: 'Montserrat';
