--- a/css/menu.css
+++ b/css/menu.css
@@ -88,7 +88,7 @@
 	text-align: center;
 	margin: 0 auto 50px;
   }
-  .tab {
+  .tab,.tabla {
 	font-family: 'Open Sans';
 	font-size: 18px;
 	letter-spacing: 0px;
@@ -105,6 +105,7 @@
 	border-radius: 6px;
 	overflow: hidden;
   }
+
   .tab.long {
 	width: 95%;
 	height: 90%;
@@ -186,6 +187,14 @@ svg {overflow:hidden}
 	.tab {
 	  width: 100% !important;
 	  margin: 10px 10px 10px 10px;
+	}
+	.tabla {
+		width: 40% !important;
+		margin: 10px 10px 10px 10px;
+	}
+
+	.pic{
+		width: 50%;
 	}
   }
   @media screen and (max-width: 700px) {
