--- a/css/menu.css
+++ b/css/menu.css
@@ -1,4 +1,23 @@
 
+  .portada{ 
+	width: 100%;
+	float: none;
+	position: relative;
+	float: left;
+	z-index: 1;
+	box-sizing: content-box;
+	margin: 1% 1% 1% 1%;
+	background-color: rgba(0,0,0,0.6);
+	background-position: center center;
+
+  }
+  img.port{
+	width: 65%;
+	margin-left: 18%;
+  }
+  button.port{
+	margin-left: 46%;
+  }
   .rela-block {
 	display: block;
 	position: relative;
@@ -196,6 +215,26 @@ svg {overflow:hidden}
 	.pic{
 		width: 50%;
 	}
+
+	.portada{ 
+		width: 100%;
+		float: none;
+		position: relative;
+		float: left;
+		z-index: 1;
+		box-sizing: content-box;
+		margin: 1% 1% 1% 1%;
+		background-color: rgba(0,0,0,0.6);
+		background-position: center center;
+	
+	  }
+	  img.port{
+		width: 100%;
+		margin-left: 0px;
+	  }
+	  button.port{
+		margin-left: 36%;
+	  }
   }
   @media screen and (max-width: 700px) {
 	.content-container {
