--- a/css/menu.css
+++ b/css/menu.css
@@ -1,4 +1,5 @@
 
+
   .portada{ 
 	width: 100%;
 	float: none;
@@ -17,6 +18,24 @@
   }
   button.port{
 	margin-left: 46%;
+  }
+
+  button,html [type=button]{
+	      width: 100px;
+		  height: 50px;
+		  display: block;
+		  border-radius: 6px;
+		  text-align: center;
+		  font-weight: bold;
+		  max-width: 320px;
+		  overflow: hidden;
+		  color: rgba(255,255,255,1);
+		  cursor: pointer;
+		  letter-spacing: 2px;
+		  box-shadow: inset 0 0 0 1px rgb(0 0 0 / 10%);
+		  text-decoration: none;
+		  transition: all ease 0.5s;
+		  background: #10B87B;
   }
   .rela-block {
 	display: block;
